--- a/src/docs/asciidocs/api-guide.adoc
+++ b/src/docs/asciidocs/api-guide.adoc
@@ -1,25 +1,65 @@
 ==== Links
-= Getting Started With KASSA REST service
+= Getting Started With SKASSA REST service
 
 This is an example output for a service running at http://localhost:8080:
 
-get all user
+Get all users
 
 .request
-include::{snippets}/get_user/http-request.adoc[]
+include::{snippets}/get-user/http-request.adoc[]
 .response
-include::{snippets}/get_user/http-response.adoc[]
+include::{snippets}/get-user/http-response.adoc[]
+.response fields
+include::{snippets}/get-user/response-fields.adoc[]
 .curl
-include::{snippets}/get_user/curl-request.adoc[]
+include::{snippets}/get-user/curl-request.adoc[]
+
+Get user by id
+
+.request
+include::{snippets}/get-user-by-id/http-request.adoc[]
+.path parameters
+include::{snippets}/get-user-by-id/path-parameters.adoc[]
+.response
+include::{snippets}/get-user-by-id/http-response.adoc[]
+.response fields
+include::{snippets}/get-user-by-id/response-fields.adoc[]
+
+.curl
+include::{snippets}/get-user-by-id/curl-request.adoc[]
 
 Create user
 
 .request
-include::{snippets}/create_user/http-request.adoc[]
+include::{snippets}/create-user/http-request.adoc[]
+.request fields
+include::{snippets}/create-user/request-fields.adoc[]
 .response
-include::{snippets}/create_user/http-response.adoc[]
+include::{snippets}/create-user/http-response.adoc[]
 .curl
-include::{snippets}/create_user/curl-request.adoc[]
+include::{snippets}/create-user/curl-request.adoc[]
+
+Update user
+
+.request
+include::{snippets}/update-user/http-request.adoc[]
+.request fields
+include::{snippets}/update-user/request-fields.adoc[]
+.response
+include::{snippets}/update-user/http-response.adoc[]
+.curl
+include::{snippets}/update-user/curl-request.adoc[]
+
+Delete user
+
+.request
+include::{snippets}/deleted-user/http-request.adoc[]
+.path parameters
+include::{snippets}/deleted-user/path-parameters.adoc[]
+.response
+include::{snippets}/deleted-user/http-response.adoc[]
+.curl
+include::{snippets}/deleted-user/curl-request.adoc[]
 
 Test error
 
